# scara_arm

./: .gitattributes  16_6_2025_data.txt  README.md  callbacks.py  can_begin.sh  canbase.py  canbase_merged.py  canbase_strange.py  candump.py  function.py  get.sh  main.py  pull.sh  push.sh  run.sh  stepper.py  temp.npy  tester.py  trun.sh  ui.sh  uim342ab.py  uirobot_stepper.py  update.sh
c_ver/: simplecan3.py  stepper.py  tester.py
csv_files/: Shuttle_20250908.csv  _____json_to_pvt.py  classified_edges_resampled_place_shelf_20250922.csv  config.json  demo_shuttle.csv  json_extractor.py  json_to_pvt.py  motion_designer.py  motion_pickup_pvt.csv  motions.json  motions_pvt.csv  pickup_shelf_20250922.csv  pickup_shelf_traj.csv  place_shelf_20250922.csv  pvt_generator.py  pvt_preview.py  resampled_DEMO_Shuttle.csv  resampled_motion_2.json  resampled_place_shelf_20250922.csv  segmentation.py  task_gui_stream_pvt.py  test_2_pvt.csv  trajectory_generator.py  trajectory_output.csv  viewer.py  visualize.py
csv_files/legacy/: motion_example.json  motion_example_pvt.csv  motion_pickup.json  motions_pvt.csv  pickup_shelf_20250922.csv  place_shelf_20250922.csv  pvt_generator.py
csv_files/proto/: proto_dangerous_angle_detection.py  proto_pvt_preview.py
csv_files/resampled/: motion_list.csv  motion_list.json  pickup_shelf_20250922.csv
datasheet/: READMEmd
demo/: b1_servo.py  b1_stepper.py  b2_pvt.py  b3_motion.py  b4_function.py  b5_gui.py  motion_data_4.csv
developer_tools/: README.md  config.json  demo_shuttle.csv  task_gui_stream_pvt.py
developer_tools/Scara_Arm_CSV_files/: Home_20251017.csv
developer_tools/motion_designer/: motion_designer.py  pvt_generator.py
developer_tools/proto/: proto_json_to_pvt.py  proto_projection.py
developer_tools/resampled/: motion_list.csv
developer_tools/task_gui/: config.json  csv_viewer.py  task_gui.py
motion_gen/: gen_2.py  test_1.py  trajectory_app.py
pusirobot/: README.md  a_can.py  a_gui.py  makro_gui.py  meso_motion.py  meso_pp.py  meso_pvt.py  meso_sp.py  micro_can.py  micro_servo.py  micro_stepper.py  pvt_example.py  pvt_test.py  try_motion.py  try_pvt_circular.py
pusirobot/legacy/: y.py
pusirobot/ver_b/: b0_can.py  b1_servo.py  b1_stepper.py  b2_pp.py  b2_pvt.py  b2_sp.py  b3_motion.py  b4_function.py  b5_gui.py  b5_servo_test.py
pusirobot/ver_c/: b0_can.py  b1_servo.py  b1_stepper.py  b2_pp.py  b2_pvt.py  b3_motion.py  b4_function.py  b5_gui.py  b5_servo_test.py  config_origin.json  motion_data.csv  motion_data_2.csv  motion_data_3_with_sp.csv
pusirobot/ver_d/: b1_servo.py  b1_stepper.py  b2_pvt.py  b3_motion.py  b4_function.py  b5_gui.py  b5_servo_test.py  config_origin.json  kinematics_and_trajectory.py  motion_data_2.csv  motion_data_4.csv  motion_planner.txt
robot_controller/: package.xml  setup.cfg  setup.py
robot_controller/robot_controller/: arm.py  callbacks.py  config_origin.json  main.py  robot.py  servo.py  stepper.py  tester.py  utility.py
robot_controller_virtual/: package.xml  setup.cfg  setup.py
robot_controller_virtual/launch/: try_mechanism.launch.py  virtual_controller_rviz.launch.py
robot_controller_virtual/robot_controller_virtual/: joint_state_mapper.py  main.py
robot_description/: CMakeLists.txt  README.md  package.xml
robot_description/launch/: display.launch.py  pvt_viewer.launch.py  sim.launch.py
robot_description/meshes/: Arm_Base.prefab  Arm_Base_0.asset  Arm_Base_1.asset  Arm_Base_2.asset  Arm_Base_3.asset  Arm_Base_4.asset  Arm_Base_5.asset  First_Link.prefab  First_Link_0.asset  Fixed_Vertical_Rail.prefab  Fixed_Vertical_Rail_0.asset  Gripper.prefab  Gripper_0.asset  Second_Link.STL  Second_Link.prefab  Second_Link_0.asset  Second_Link_1.asset  Second_Link_2.asset
robot_description/meshes/Materials/: Default 1.mat  Default.mat  Highlight.mat  rgba-0.75294-0.75294-0.75294-1.mat  rgba-0.752941176470588-0.752941176470588-0.752941176470588-1.mat
robot_description/rviz/: robot_description.rviz
robot_description/scripts/: pvt_to_joint
robot_description/urdf/: robot_description.urdf
robot_sim/: CMakeLists.txt  README.md  package.xml
robot_sim/config/: controller.yaml
robot_sim/launch/: sim.launch.py
robot_sim/rviz/: robot_sim.rviz
robot_sim/scripts/: joint_state_mapper
robot_ui/: package.xml  setup.cfg  setup.py
robot_ui/launch/: tester_ui.launch.py
robot_ui/robot_ui/: tester_ui.py
scara_arm_msgs/: CMakeLists.txt  package.xml
scara_arm_msgs/msg/: TesterUICommand.msg
scara_ws/src/control/: CMakeLists.txt  package.xml
scara_ws/src/control/launch/: develop.launch  gui.launch
scara_ws/src/control/msg/: Params.msg
scara_ws/src/control/src/: can_handler.cpp  can_receiver.cpp  can_sender.cpp  file1.cpp  gui.py  main.cpp  zlac706_receiver.cpp  zlac706_sender.cpp  zlis42_receiver.cpp  zlis42_sender.cpp
src/e_ver/: callbacks.py
src/f_ver/: callbacks.py  robot.py  servo.py
src/g_ver/: arm.py  callbacks.py  gui.py  main.py  robot.py  servo.py
stepper_pusirobot/: PMC007C6SEP2-v374.EDS  pvt_test.py
stepper_pusirobot/ver_a/: a_can.py  a_gui.py
stepper_pusirobot/ver_b/: b1_servo.py  b2_pp.py  b2_sp.py  b5_gui.py  b5_servo_test.py
stepper_pusirobot/ver_c/: b0_can.py  b1_servo.py  b1_stepper.py  b2_pvt.py  b3_motion.py  b5_gui.py  motion_data.csv  motion_data_2.csv
stepper_pusirobot/ver_d/: b1_servo.py  b1_stepper.py  b2_pp.py  b2_pvt.py  b5_gui back_up.py  b5_gui.py  b5_servo_test.py  motion_data_3_with_sp.csv
stepper_uirobot/: README.md  callbacks.py  canbase.py  canbase_ori.py  gui.py  main.py  worker.py
stepper_uirobot/a_ver/: callbacks.py  gui.py  main.py  worker.py
stepper_uirobot/b_ver/: callbacks.py  canbase.py  canbase_strange.py  function.py  gui.py  stepper.py  tester.py
stepper_uirobot/c_ver/: README.md  arm.py  callbacks.py  canbase.py  function.py  main.py  motion.py  motion_data_4.csv  origin.py  (+4 more)
utility/: candump.py  get.sh  push.sh  run.sh  setup_fake_can.sh  setup_vcan.sh  trun.sh  ui.sh
virtual_motor_msgs/: CMakeLists.txt  package.xml
virtual_motor_msgs/msg/: MotorStatus.msg  PVTPoint.msg  PositionCommand.msg
(+80 files in other folders)
